commit 3f198812d5d8f2fe9b0425d09369aa9de8bdf776
Date:   Sat Aug 22 02:25:54 2015 +0300

    Change setup.py to require zmq

commit 1e8a02543bf2ab89d6cd3be10cb09e0c081b00ff
Date:   Fri Aug 21 22:42:28 2015 +0300

    Clarified installation in the wiki

commit 8707d8f5bafc0993883045733e5de96e7a8f11ea
Date:   Sat Aug 15 15:37:56 2015 +0300

    Moved examples to using ZeroMQ

commit bfe3381f968abe69474e9791c29919bd8d466437
Date:   Wed Aug 12 23:12:09 2015 +0300

    Updated documentation for ZeroMQ in OpenTrader

commit ac9b3c0e2833a9a019f66adfa826534b586f6323
Date:   Wed Aug 12 21:33:30 2015 +0300

    Fixed using ZeroMQ for OpenTrader

commit 887ada9277d0bb5d31af234791d8152fd257d8a2
Date:   Wed Aug 12 18:24:32 2015 +0300

    Refactored to put Zmq in OpenTrader - starting testing

commit 8afa82927f7b9a5837ff1bd840a2ddc577a69f7a
Date:   Wed Jul 29 01:56:59 2015 +0300

    Minor bug fixes

commit 3106c1180b575030cfbf973883c97b786d7461e0
Date:   Mon Jul 13 21:57:01 2015 +0300

    Update share/examples

commit 196a20765aedb48e1178bab0e3cfc865262a2913
Date:   Mon Jul 13 20:24:36 2015 +0300

    Made behave exit the OTCmd2 threads properly if there was an error and you dropped into pdb

commit 7922904fca84c3f64a725014f5550779acda1656
Date:   Sun Jul 12 21:58:31 2015 +0300

    Updated to using behave 1.2.5 BDD

commit 834198fbd4585553b616a96f4c9d941be3db282a
Date:   Wed Jul 1 23:01:47 2015 +0300

    Refactored the threading

commit 36d046693571415464c63d1afaa41d301eda7851
Date:   Fri Jun 19 17:15:44 2015 +0300

    Refactored SMARK for ZmqCmd

commit 255af6414cf7eaed4107e01722043a4e6dd78631
Date:   Thu Jun 18 16:43:53 2015 +0300

    Added wiki pages

commit 16a4582a051d0399b7b2f137ec10cc92063f364e
Date:   Thu Jun 18 12:46:13 2015 +0300

    Wired up backtest servings tabview reviews
    and switch tabview to mdbartos feat branch - it handles timeseries.

commit 5f1c6ffee1e47bd957cf154348e559c7c76f5409
Date:   Thu Jun 18 00:27:39 2015 +0300
