@@ -90,9 +90,14 @@ iMacdEma = 9
 # axes.xmargin = 
 # axes.ymargin = 
 # axes3d.grid = 
-# backend = 
-# backend.qt4 = 
-# backend_fallback = 
+#  valid strings are ['pdf', 'pgf', 'Qt4Agg', 'GTK', 'GTKAgg',
+#  'ps', 'agg', 'cairo', 'MacOSX', 'GTKCairo', 'WXAgg',
+#  'TkAgg', 'GTK3Cairo', 'GTK3Agg', 'svg',
+#  'WebAgg', 'CocoaAgg', 'emf', 'gdk', 'WX']
+#  we freeze support for: 'Qt4Agg', 'TkAgg', 'WX', 'WXAgg', 'agg', 
+backend = 'Qt4Agg'
+backend.qt4 = 'PyQt4'
+backend_fallback = 'TkAgg'
 # contour.negative_linestyle = 
 # datapath = 
 # docstring.hardcopy = 
