@@ -564,3 +564,51 @@ This file is automatically generated from the source code: do not edit.
 
 ----
 This file is automatically generated from the source code: do not edit.
+== Title Index
+
+* [[Architecture]]
+* [[Backtesting]]
+* [[Cmd2]]
+* [[ComparingOmeletteReviews]]
+* [[Components]]
+* [[DocOTBackTest]]
+* [[DocOTCmd2]]
+* [[DocOTCmd2_backtest]]
+* [[DocOTCmd2_chart]]
+* [[DocOTCmd2_csv]]
+* [[DocOTCmd2_order]]
+* [[DocOTCmd2_publish]]
+* [[DocOTCmd2_rabbit]]
+* [[DocOTCmd2_subscribe]]
+* [[DocOTPpnAmgc]]
+* [[FrontPage]]
+* [[Home]]
+* [[Installation]]
+* [[OTMql4AMQP]]
+* [[OTMql4Py]]
+* [[OTMql4Zmq]]
+* [[Omlettes]]
+* [[RabbitMQ]]
+* [[Recipes]]
+* [[RoadMap]]
+* [[TaLib]]
+* [[TaLib_cycle_indicators]]
+* [[TaLib_math_operators]]
+* [[TaLib_math_transform]]
+* [[TaLib_momentum_indicators]]
+* [[TaLib_overlap_studies]]
+* [[TaLib_pattern_recognition]]
+* [[TaLib_price_transform]]
+* [[TaLib_statistic_functions]]
+* [[TaLib_volatility_indicators]]
+* [[TaLib_volume_indicators]]
+* [[TabView]]
+* [[Testing]]
+* [[TestsExamples]]
+* [[TestsFeatures]]
+* [[TitleIndex]]
+* [[UseCases]]
+* [[ViTables]]
+
+----
+This file is automatically generated from the source code: do not edit.
